(bug) filling cart in % of page to fix overflow

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -204,5 +204,5 @@ h1, h3{
 .shopping-cart {
   position: fixed;
   overflow: auto;
-  width: 16%;
+  width: 18%;
 }
